Replace JUnit assertions with AssertJ assertions in VPack test classes